@@ -5,11 +5,11 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{20458D50-3D54-45DD-9E22-5B2289B6AB91}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <ProjectGuid>{A4983D6C-8F15-4E87-B751-EDC9B9B7EB1A}</ProjectGuid>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>AjLanguage</RootNamespace>
-    <AssemblyName>AjLanguage</AssemblyName>
+    <RootNamespace>AjSharp.Console</RootNamespace>
+    <AssemblyName>AjSharp.Console</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -31,8 +31,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Microsoft.VisualBasic" />
-    <Reference Include="msmdvbanet, Version=10.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91, processorArchitecture=MSIL" />
     <Reference Include="System" />
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
@@ -47,39 +45,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BindingEnvironment.cs" />
-    <Compile Include="Commands\CompositeCommand.cs" />
-    <Compile Include="Commands\DefineFunctionCommand.cs" />
-    <Compile Include="Commands\ForCommand.cs" />
-    <Compile Include="Commands\ForEachCommand.cs" />
-    <Compile Include="Commands\Function.cs" />
-    <Compile Include="Commands\FunctionStatus.cs" />
-    <Compile Include="Commands\ICallable.cs" />
-    <Compile Include="Commands\InvokeCommand.cs" />
-    <Compile Include="Commands\ReturnCommand.cs" />
-    <Compile Include="Commands\WhileCommand.cs" />
-    <Compile Include="Commands\ICommand.cs" />
-    <Compile Include="Commands\IfCommand.cs" />
-    <Compile Include="Commands\SetVariableCommand.cs" />
-    <Compile Include="Expressions\ArithmeticBinaryExpression.cs" />
-    <Compile Include="Expressions\ArithmeticUnaryExpression.cs" />
-    <Compile Include="Expressions\BinaryExpression.cs" />
-    <Compile Include="Expressions\ConstantExpression.cs" />
-    <Compile Include="Expressions\AndExpression.cs" />
-    <Compile Include="Expressions\CompareExpression.cs" />
-    <Compile Include="Expressions\InvokeExpression.cs" />
-    <Compile Include="Expressions\OrExpression.cs" />
-    <Compile Include="Expressions\NotExpression.cs" />
-    <Compile Include="Expressions\IExpression.cs" />
-    <Compile Include="Expressions\UnaryExpression.cs" />
-    <Compile Include="Expressions\VariableExpression.cs" />
-    <Compile Include="Language\ArithmeticOperator.cs" />
-    <Compile Include="Language\ComparisonOperator.cs" />
-    <Compile Include="Machine.cs" />
-    <Compile Include="Predicates.cs" />
-    <Compile Include="Primitives\PrintLineSubroutine.cs" />
-    <Compile Include="Primitives\PrintSubroutine.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\AjLanguage\AjLanguage.csproj">
+      <Project>{20458D50-3D54-45DD-9E22-5B2289B6AB91}</Project>
+      <Name>AjLanguage</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\AjSharp\AjSharp.csproj">
+      <Project>{C2B2BD8F-A94E-4A15-BE60-A8B68CDA0795}</Project>
+      <Name>AjSharp</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
